--- a/cards-metrics.css
+++ b/cards-metrics.css
@@ -471,7 +471,7 @@
     }
     
     .metricas-adicionales {
-        min-height: auto;
+        min-height: 1200px;
     }
     
     .chart-card {
